# snp_primer_for_windows

./: .gitignore  CLAUDE.md  README.md  build_windows.bat  build_windows_onefile.bat  pyproject.toml
core/: __init__.py  getCAPS.py  getflanking.py  getkasp3.py  parse_polymarker_input.py  pipeline.py  species.py
docs/: run_windows.md  windows_app_blueprint.md
references/: catalog.example.json
src/snp_primer_app/: __init__.py  alignment.py  asset_utils.py  caps.py  cli.py  desktop.py  external_tools.py  flanking.py  kasp.py  launch_gui.py  models.py  online_blast.py  parsers.py  pipeline_runner.py  primer3_parser.py  primer3_runtime.py  primer_blast_view.py  reference_catalog.py  runtime_paths.py  sequence_utils.py  specificity.py  workflow.py
src/snp_primer_app/assets/: __init__.py  global_settings.txt
tests/: build_fixtures.py  build_mini_abd_db.py  check_windows_binaries.py  compare_outputs.py  simulate_desktop.py  simulate_desktop_chr7a.py  simulate_desktop_ncbi_online.py  test_alignment.py  test_caps.py  test_flanking.py  test_online_blast.py  test_parsers.py  test_pipeline_runner.py  test_primer3_parser.py  test_primer3_runtime.py  test_runtime_paths.py
tests/fixtures/: blast_out.txt
tests/fixtures/expected/: alignment_raw_IWB50236.fa  alignment_raw_IWB58849.fa  selected_CAPS_primers_IWB50236.txt  selected_CAPS_primers_IWB58849.txt  selected_KASP_primers_IWB50236.txt  selected_KASP_primers_IWB58849.txt
tests/fixtures/flanking/: flanking_temp_marker_IWB50236_7A_R_501.txt.fa  (+1 more)
windows/: Launch SNP Primer Desktop.cmd  bootstrap_and_launch.ps1
(+12 files in other folders)
